<resources>
    <string name="app_name">Ampiri Sample</string>
    <string name="ad_banner_standard">Ampiri Standard Banner Sample</string>
    <string name="ad_banner_big">Ampiri Big Banner Sample</string>
    <string name="ad_interstitial">Ampiri Interstitial Sample</string>
    <string name="ad_video">Ampiri Video Interstitial Sample</string>
    <string name="ad_native">Ampiri Native Ad Sample</string>
    <string name="ad_native_video">Ampiri Native Video Ad Sample</string>
    <string name="ad_native_infeed_feed_card">Ampiri Infeed Ad Sample</string>
    <string name="ad_native_infeed_story_card">Ampiri Infeed Story Card Ad Sample</string>
    <string name="ad_native_infeed_video_card">Ampiri Infeed Video Card Ad Sample</string>
    <string name="ad_native_view_pager">Ampiri View Pager Ad Sample</string>

    <string name="auto_refresh">Auto update</string>

    <string name="ad_loaded">Banner loaded</string>
    <string name="ad_error">Banner error with status</string>
    <string name="ad_showed">Banner showed</string>
    <string name="ad_clicked">Banner clicked</string>
    <string name="ad_closed">Banner closed</string>
    <string name="ad_completed">Banner completed</string>

    <string name="interstitial_show">Show Interstitial</string>
    <string name="interstitial_load">Load Interstitial</string>
    <string name="interstitial_show_on_load">Load and show</string>
    <string name="interstitial_delay_show_on_load">Load and show with delay</string>

    <string name="video_show">Show Video</string>
    <string name="video_load">Load Video</string>
    <string name="video_show_on_load">Load and show</string>

    <string name="ad_attribution_text">Sponsored</string>
    <string name="call_to_action_text">Install</string>

    <string name="in_feed_item">Item %d</string>
</resources>
